--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -1,4 +1,5 @@
 body {
+    background-color: #1e1f24;
     color:#333;
     text-align: left;
     font-family: Arial;
@@ -9,12 +10,18 @@ body {
 
 #Cabecera 
 {
-    background-color: #33a;
-    box-shadow: 0px 2px 50px 0px rgba(0, 0, 0, 0.75);
+    background:#37488b ;
+    box-shadow: 0px 2px 50px 0px rgba(0, 0, 0, 0.5);
     color: white;
     font-weight: bold;
     margin: 0;
-    padding: 0.5em;
+    padding: 0.5em o o.5em 2em;
+}
+
+#Cabecera #logo 
+{
+    width: 20px;
+    vertical-align: middle;
 }
 
 #Cabecera #tagline 
@@ -40,5 +47,6 @@ body {
 
 #post 
 {
+    background-color:white;
     padding: 1em;
 }
